<resources>
    <string name="app_name">FantasyFootballTeams</string>
    <string name="action_settings">Settings</string>
    <string name="fantasy_football_team_maker">Fantasy Football Team Maker</string>
    <string name="nfl_Logo">nflLogo</string>
    <string name="create_team_button">Create Team</string>
    <string name="title_activity_create_team">CreateTeamActivity</string>
    <string name="team_name_text_view">Enter Team Name</string>
    <string name="choose_league_text_view">Choose a League</string>
    <string name="enter_season_text_view">Enter a Season</string>
    <string name="afc_radio_button">AFC</string>
    <string name="nfc_radio_button">NFC</string>
    <string name="season_edit_text">2015</string>
    <string name="team_name_edit_text">Most Awesome Team Name Ever !!!</string>
    <string name="submit_your_team_button">Submit Your Team</string>
    <string name="league_name_edit_text">AFC or NFC</string>
    <string name="title_activity_add_player">add_player</string>
    <string name="add_player">Add a Player</string>

    <string-array name="position_array">
        <item>QB</item>
        <item>RB</item>
        <item>WR</item>
        <item>TE</item>
        <item>K</item>
        <item>DST</item>
    </string-array>

    <string-array name="weekSpinner_array">
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
        <item>Week 5</item>
        <item>Week 6</item>
        <item>Week 7</item>
        <item>Week 8</item>
        <item>Week 9</item>
        <item>Week 10</item>
        <item>Week 11</item>
        <item>Week 12</item>
        <item>Week 13</item>
        <item>Week 14</item>
        <item>Week 15</item>
        <item>Week 16</item>
    </string-array>


    <string name="title_activity_team_results">TeamResultsActivity</string>
    <string name="view_your_team_button">View Teams</string>
    <string name="title_activity_player_results2">player_results2</string>
    <string name="title_activity_player_result">player_result</string>
    <string name="delete_team_button">Delete Team</string>
    <string name="title_activity_delete_team">delete_team</string>
    <string name="title_activity_delete_player">delete_player</string>
    <string name="title_activity_add_to_roster">add_to_roster</string>
    <string name="title_activity_team_week">TeamWeekActivity</string>
    <string name="team_selection">Team Selection</string>
    <string name="title_activity_add_points">AddPointsActivity</string>
    <string name="team_text_view">Team</string>
    <string name="enter_player_points">Enter Player Points</string>
    <string name = "week_selection_text_view"></string>
    <string name="week_selection">Week Selection</string>
    <string name="team_week_submit_button">Submit</string>
    <string name="set_this_weeks_points_button">Set this week\'s Points</string>
    <string name="set_this_weeks_roster_button">Set this Week\'s Roster</string>

</resources>
